--- a/_pages/404.md
+++ b/_pages/404.md
@@ -5,6 +5,7 @@ excerpt: "Page not found. Your pixels are in another canvas."
 sitemap: false
 permalink: /404.htmls
 ---
+Sorry, the page you're looking for does not exist. --- perhaps you can try searcing for it below.
 
 <script type="text/javascript">
   var GOOG_FIXURL_LANG = 'en';
