--- a/_pages/404.md
+++ b/_pages/404.md
@@ -3,7 +3,7 @@ title: "Page Not Found"
 layout: single
 excerpt: "Page not found. Your pixels are in another canvas."
 sitemap: false
-permalink: /404.htmls
+permalink: /404.html
 ---
 Sorry, the page you're looking for does not exist. --- perhaps you can try searcing for it below.
 
